objects/LLC_BI__Matrix__c.object
<CustomObject>
    <description>This object stores matrices used with Policy Management. A matrix contains differentiated prices based on customer and product attributes and, when queried, returns a single price.</description>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>Users populate this field with a description of the matrix</description>
        <inlineHelpText>Enter a description of this matrix</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Single_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field to bypass the matrix builder and set one value that applies to all matrix dimensions. By default, it is false.</description>
        <inlineHelpText>Select this field to bypass the matrix builder and set one value that applies to all matrix dimensions.</inlineHelpText>
        <label>Set a Single Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Matrix_Type__c</fullName>
        <description>Users populate this required field to specify the matrix type. By default, it is blank.</description>
        <label>Matrix Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base Rate Matrix</fullName>
                </value>
                <value>
                    <fullName>Rate Adjustment</fullName>
                </value>
                <value>
                    <fullName>Income Policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Policy__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Administrators populate this required lookup field with the associated policy. By default, the value is blank.</description>
        <inlineHelpText>Select the associated policy.</inlineHelpText>
        <label>Policy</label>
        <referenceTo>LLC_BI__Policy__c</referenceTo>
        <relationshipLabel>Matrices</relationshipLabel>
        <relationshipName>Matrices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Strategy__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this field with the associated strategy when a user creates a matrix.</description>
        <label>Strategy</label>
        <referenceTo>LLC_BI__Strategy__c</referenceTo>
        <relationshipLabel>Matrices</relationshipLabel>
        <relationshipName>Matrices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Matrix</label>
    <listViews>
        <fullName>LLC_BI__Pricing</fullName>
        <filterScope>Everything</filterScope>
        <label>Pricing</label>
    </listViews>
    <nameField>
        <label>Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>